--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -87,7 +87,7 @@
     background-color: #808080;
 }
 
-#productosTitulo p {
+#productosTitulo h3 {
     font-size: 30px;
     color: white;
     font-family: 'Caveat', cursive;
@@ -95,6 +95,7 @@
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Oswald', sans-serif;
+    margin-bottom: 15px;
 }
 
 #productos {
