--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
     background-color: #0a0a0a;
     align-items: center;
-    height: 80px;
+    height: 180px;
 }
 
 #logo {
@@ -110,6 +110,7 @@
 .prod {
     border: 1px solid black;
     padding: 10px;
+    border-radius: 10px;
     margin-top: 20px;
     background-color: #0a0a0a;
     margin-right: 50px;
@@ -239,11 +240,9 @@
 #galeriaImg {
     display: flex;
     justify-content: space-around;
-    margin: 10px;
-    border-radius: 10px;
+    margin: 10px 0px 10px 0px;
     background-color: #1a1a1a;
     padding: 20px;
-    border: 2px solid #b08a17;
 }
 
 #galeriaImg p {
